Changing position from 'absolute' to 'fixed' so the modal works correctly on pages with a scrollbar

--- a/src/ng-modal.less
+++ b/src/ng-modal.less
@@ -1,5 +1,5 @@
 .ng-modal-overlay {
-  position:absolute;
+  position:fixed;
   z-index:9999;
   top:0;
   left:0;
@@ -10,7 +10,7 @@
 }
 .ng-modal-dialog {
   z-index:10000;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   width: 50%;
